--- a/Tyuiu.KardonKD.Sprint2.Task5.V11.Lib/Tyuiu.KardonKD.Sprint2.Task5.V11.Lib.csproj
+++ b/Tyuiu.KardonKD.Sprint2.Task5.V11.Lib/Tyuiu.KardonKD.Sprint2.Task5.V11.Lib.csproj
@@ -1,14 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.KardonKD.Sprint2.Task5.V11.Lib\Tyuiu.KardonKD.Sprint2.Task5.V11.Lib.csproj" />
+    <Reference Include="tyuiu.cources.programming.interfaces">
+      <HintPath>..\tyuiu.cources.programming.interfaces.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
