--- a/Tyuiu.KardonKD.Sprint2.Task5V11.Test/Tyuiu.KardonKD.Sprint2.Task5V11.Test.csproj
+++ b/Tyuiu.KardonKD.Sprint2.Task5V11.Test/Tyuiu.KardonKD.Sprint2.Task5V11.Test.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.KardonKD.Sprint2.Task5V11.Lib\Tyuiu.KardonKD.Sprint2.Task5V11.Lib.csproj" />
+    <ProjectReference Include="..\Tyuiu.KardonKD.Sprint2.Task5.V11.Lib\Tyuiu.KardonKD.Sprint2.Task5.V11.Lib.csproj" />
   </ItemGroup>
 
   <ItemGroup>
